# F1-Simulator

./: .gitignore  README.md  orchestrator.py  pyproject.toml  requirements.txt
lap_data/: cli.py  main.py
lap_data/config/: settings.py
lap_data/extractor/: cleaner.py  fastf1_fetcher.py  utils.py
laptime_predictor/: __init__.py  __main__.py  cli.py  main.py
laptime_predictor/config/: settings.py
laptime_predictor/predictor/: __init__.py  features.py  imputer.py  model.py  utils.py
pitstop_simulator/: makefile  manage.py
pitstop_simulator/backend/: urls.py  views.py
pitstop_simulator/f1sim/: asgi.py  settings.py  urls.py  wsgi.py
pitstop_simulator/f1sim/templates/: index.html
pitstop_simulator/frontend/: package-lock.json
pitstop_simulator/frontend/public/: index.html
pitstop_simulator/frontend/src/: index.js
pitstop_simulator/frontend/src/css/: styles.css  styles.css.map  styles.scss
pitstop_simulator/frontend/src/css/abstract/: _colors.scss  _fonts.scss  _mixins.scss  _variables.scss
pitstop_simulator/frontend/src/css/includes/: _navbar.scss
pitstop_simulator/frontend/src/scripts/includes/: navbar.js
pitstop_simulator/frontend/src/scripts/pages/: home.js
simulator/: config.py  main.py
simulator/cli/: menu.py  prompts.py
simulator/simulation/: __init__.py  pitstop_strategy.py
simulator/strategy/: __init__.py  constraints.py  models.py  search.py  simulation.py
