[project]
name = "lap_data"
version = "1.0.0"
description = "F1 lap data extraction package using FastF1"
authors = [
    { name="Andria Beridze", email="andria24b@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.0"
fastf1 = "^3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
