[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-pipeline"
version = "1.0.0"
description = "F1 lap data extractor and lap time predictor"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "fastf1",
    "lightgbm",
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["lap_data", "laptime_predictor"]

# Optional scripts / CLI entry points
[project.scripts]
lap-data        = "lap_data.main:__main__"
laptime-predict = "laptime_predictor.main:__main__"